--- a/src/pages/login/GUI.fxml
+++ b/src/pages/login/GUI.fxml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="rootPane" fx:id="rootPane" prefHeight="230" prefWidth="320" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pages.login.FXMLController">
+<AnchorPane id="rootPane" fx:id="rootPane" maxHeight="240.0" maxWidth="345.0" minHeight="240.0" minWidth="345.0" prefHeight="240.0" prefWidth="345.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pages.login.FXMLController">
     <children>
-        <Button fx:id="button" layoutX="126" layoutY="90" onAction="#handleButtonAction" text="Click Me!" />
-        <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
-      <Button id="btn_test" fx:id="test" layoutX="85.0" layoutY="161.0" mnemonicParsing="false" onAction="#handleButtonToggle" text="Click to Open test Page" />
-      <Label layoutX="259.0" layoutY="30.0" text="Label" />
+        <Button fx:id="button" layoutX="205.0" layoutY="156.0" onAction="#handleButtonAction" prefHeight="25.0" prefWidth="72.0" text="clear" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="210.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="160.0" />
+        <Label fx:id="label_login" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="25.0" layoutY="73.0" minHeight="15.0" minWidth="32.0" prefHeight="15.0" prefWidth="72.0" text="log in" textAlignment="JUSTIFY" AnchorPane.bottomAnchor="147.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="240.0" AnchorPane.topAnchor="73.0" />
+      <Button id="btn_test" fx:id="test" layoutX="113.0" layoutY="156.0" mnemonicParsing="false" onAction="#handleButtonToggle" prefHeight="25.0" prefWidth="72.0" text="Log In" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="110.0" AnchorPane.rightAnchor="160.0" AnchorPane.topAnchor="160.0" />
+      <Label id="close_app" fx:id="close_app" layoutX="306.0" layoutY="24.0" onMouseClicked="#closeApplication" text="x" AnchorPane.bottomAnchor="200.0" AnchorPane.leftAnchor="305.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0" />
+      <Label fx:id="label_password" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="25.0" layoutY="110.0" minHeight="16" minWidth="58.0" prefHeight="16.0" prefWidth="72.0" text="password" AnchorPane.bottomAnchor="109.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="240.0" AnchorPane.topAnchor="110.0" />
+      <TextField layoutX="113.0" layoutY="73.0" AnchorPane.bottomAnchor="142.0" AnchorPane.leftAnchor="110.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="73.0" />
+      <TextField layoutX="113.0" layoutY="111.0" AnchorPane.bottomAnchor="104.0" AnchorPane.leftAnchor="110.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="111.0" />
+      <Hyperlink alignment="TOP_RIGHT" layoutX="198.0" layoutY="205.0" prefHeight="21.0" prefWidth="87.0" text="Pedir cadastro" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="198.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="195.0">
+         <font>
+            <Font size="11.0" />
+         </font>
+      </Hyperlink>
     </children>
 </AnchorPane>
